// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/branch/get-updated getUpdatedPackageFiles() handles content change 1`] = `
Object {
  "lockFileErrors": Array [],
  "parentBranch": undefined,
  "updatedLockFiles": Array [],
  "updatedPackageFiles": Array [
    Object {
      "contents": "some new content",
      "name": "undefined",
    },
  ],
}
`;

exports[`workers/branch/get-updated getUpdatedPackageFiles() handles empty 1`] = `
Object {
  "lockFileErrors": Array [],
  "parentBranch": undefined,
  "updatedLockFiles": Array [],
  "updatedPackageFiles": Array [],
}
`;

exports[`workers/branch/get-updated getUpdatedPackageFiles() handles lock file errors 1`] = `
Object {
  "lockFileErrors": Array [
    Object {
      "name": "composer.lock",
      "stderr": "some error",
    },
  ],
  "parentBranch": undefined,
  "updatedLockFiles": Array [],
  "updatedPackageFiles": Array [
    Object {
      "contents": "some new content",
      "name": "undefined",
    },
  ],
}
`;

exports[`workers/branch/get-updated getUpdatedPackageFiles() handles lock files 1`] = `
Object {
  "lockFileErrors": Array [],
  "parentBranch": undefined,
  "updatedLockFiles": Array [
    Object {
      "contents": "some contents",
      "name": "composer.json",
    },
  ],
  "updatedPackageFiles": Array [
    Object {
      "contents": "some new content",
      "name": "undefined",
    },
  ],
}
`;
